<resources>
    <string name="app_name">Proyecto final</string>
    <string name="title_activity_administrador">ActivityAdministrador</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_zoologico">Zoologico</string>
    <string name="menu_animales">Animales</string>
    <string name="menu_tickets">Tickets</string>

    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="correo">Correo electronico</string>
    <string name="contraseña">Contraseña</string>
    <string name="telefono">Telefono</string>
    <string name="agente">AGENTE</string>
    <string name="volver">VOLVER</string>
    <string name="admin">Administrador</string>
    <string name="user_admin">Usuario Administrador</string>
    <string name="digite_contraseña">Digite su contraseña...</string>
    <string name="digite_correo">Digite su correo...</string>
    <string name="digite_telefono">Digite su telefono...</string>
    <string name="digite_id">Digite su identificacion...</string>
    <string name="digite_nombre">Digite su nombre...</string>
    <string name="olvidar_contraseña">RECUPERAR CONTRASEÑA</string>
    <string name="zoo">ZOO</string>
    <string name="zoologico">Zoologico...</string>
    <string name="ingresar">INGRESAR</string>
    <string name="registrado">Ya estas registrado?</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="registrar">REGISTRAR</string>
    <string name="recuperacion">RECUPERACION DE CUENTA</string>
    <string name="codigo">Digite el codigo de verificación</string>
    <string name="verificar">VERIFICAR</string>
    <string name="restaurar">RESTAURAR</string>
    <string name="registro">REGISTRO</string>
    <string name="nombre">Nombre completo</string>
    <string name="id">Número de identificación</string>
    <string name="img"></string>
    <string name="agregar_zoo">AGREGAR ZOOLOGICO</string>
    <string name="adjuntar">Adjuntar imagen...</string>
    <string name="ciudad">Ciudad...</string>
    <string name="ajusta_tarifa">AJUSTAR TARIFA</string>
    <string name="buscar_zoo">Buscar zoologicos...</string>
    <string name="buscar">BUSCAR</string>
    <string name="cargar">CARGAR</string>
    <string name="especie">Especie...</string>
    <string name="tamaño">Tamaño...</string>
    <string name="genero">Genero...</string>
    <string name="nacimiento">Año de nacimiento...</string>
    <string name="pais">Pais de origen...</string>
    <string name="continente">Continente...</string>
    <string name="nueva_contraseña">Digite su nueva contraseña...</string>
    <string name="nombre_vulgar">Nombre vulgar...</string>
    <string name="nombre_cientifico">Nombre cientifico...</string>
    <string name="familia">Familia...</string>
    <string name="moneda">Moneda...</string>
    <string name="precio">Precio Ticket...</string>
    <string name="nombre_zoo">Nombre Zoologico...</string>
    <string name="extincion">¿En peligro de extinción?</string>

    <string-array name="SpinnerAdmin">
        <item>ZOO1</item>
        <item>ZOO2</item>
        <item>ZOO3</item>
        <item>zoo4</item>

    </string-array>


    <string-array name="SpinnerTicketsA">

        <item>Seleccione el zoo...</item>
        <item>ZOO2</item>
        <item>ZOO3</item>
        <item>zoo4</item>

    </string-array>
    <string name="title_activity_usuario">UsuarioActivity</string>
    <string name="title_activity_inicio_admin">InicioAdmin</string>
</resources>