<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.proyectofinal.modulousuario.iniciou.inicioUFragment"
        android:label="@string/menu_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.proyectofinal.modulousuario.animalesu.animalesUFragment"
        android:label="@string/menu_animales"
        tools:layout="@layout/fragment_animalesu" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.proyectofinal.modulousuario.ticketsu.ticketsUFragment"
        android:label="@string/menu_zoologico"
        tools:layout="@layout/fragment_ticketsu" />
</navigation>