<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    tools:context=".ActivityIngresar">

    <Button
        android:id="@+id/btnRegresar"
        android:layout_width="146dp"
        android:layout_height="67dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#4AF4F0F0"
        android:text="@string/volver"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnOlvidarCon"
        app:layout_constraintTop_toBottomOf="@+id/btnIngresarU" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:text="@string/correo"
        android:textColor="#F3F3F3"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/edtPasswordI"
        android:layout_width="348dp"
        android:layout_height="58dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="#8BFAFAFA"
        android:ems="10"
        android:hint="@string/digite_contraseña"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnIngresarU"
        android:layout_width="227dp"
        android:layout_height="67dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#B0423D3D"
        android:text="@string/iniciar_sesion"
        android:textColor="#FBFBFB"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPasswordI" />

    <Button
        android:id="@+id/btnOlvidarCon"
        android:layout_width="169dp"
        android:layout_height="72dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#B0423D3D"
        android:text="@string/olvidar_contraseña"
        android:textColor="#FBFBFB"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIngresarU" />

    <EditText
        android:id="@+id/edtCorreoI"
        android:layout_width="366dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="#94F6F3F3"
        android:backgroundTint="#F3EDED"
        android:ems="10"
        android:hint="@string/digite_correo"
        android:inputType="textEmailSubject"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/contraseña"
        android:textColor="#F3F3F3"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCorreoI" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="85dp"
        android:text="@string/zoo"
        android:textColor="#F4EEEE"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>